--- a/style.css
+++ b/style.css
@@ -10,9 +10,12 @@
 	--color-grey: #616161;
 	--color-light-grey: #7c7979;
 	--color-dark-blue: #28346b;
-	--color-blue: #73aace;
-	--color-yellow: #fff7d1;
+	--color-blue: #0377fc;
+	--color-light-blue: #73aace;
+	--color-light-yellow: #fff7d1;
+	--color-yellow: #fcd303;
 	--color-orange: #feb546;
+	--color-dark-orange: #fc8403;
 	--color-black: #000000;
 
 	/* Font Size */
@@ -29,6 +32,9 @@
 
 	/* Size */
 	--size-border-radius: 5px;
+
+	/* Animation */
+	--animation-duration: 300ms;
 }
 
 /* Tags */
@@ -87,6 +93,14 @@ button {
 	border: none;
 }
 
+/* Section Common */
+.section {
+	text-align: center;
+	padding: 50px;
+	max-width: 1200px;
+	margin: 0 auto;
+}
+
 /* Navbar */
 #navbar {
 	display: flex;
@@ -113,7 +127,7 @@ button {
 }
 
 .navbar__menu__item:hover {
-	background-color: var(--color-blue);
+	background-color: var(--color-light-blue);
 	border-radius: var(--size-border-radius);
 }
 
@@ -144,4 +158,76 @@ button {
 	border: 2px solid var(--color-white);
 	border-radius: var(--size-border-radius);
 	color: var(--color-white);
+}
+
+/* About */
+.about__majors {
+	display: flex;
+	justify-content: space-between;
+	margin: 80px 0;
+}
+.major {
+	width: 250px;
+	height: 250px;
+}
+
+.major__icon {
+	margin: 0 auto;
+	width: 170px;
+	height: 170px;
+	line-height: 170px;
+	font-size: 70px;
+	border: 1px solid var(--color-light-grey);
+	border-radius: 50%;
+	margin-bottom: 16px;
+}
+
+.major__icon:hover i {
+	transform: scale(1.2) rotate(-10deg);
+	transition: transform var(--animation-duration) ease-in;
+}
+
+.html:hover {
+	color: var(--color-dark-orange);
+}
+
+.css:hover {
+	color: var(--color-blue);
+}
+
+.js:hover {
+	color: var(--color-yellow);
+}
+
+.major__title,
+.major__description {
+	color: var(--color-dark-grey);
+}
+
+.school {
+	display: flex;
+	align-items: center;
+}
+
+.school img {
+	width: 130px;
+	height: 130px;
+}
+
+.school__description {
+	margin: 0 16px;
+	text-align: left;
+}
+
+.school__name,
+.school__period {
+	color: var(--color-light-grey);
+}
+
+.school__name {
+	font-size: var(--font-regular);
+}
+
+.school__period {
+	font-size: var(--font-small);
 }
