--- a/style.css
+++ b/style.css
@@ -97,6 +97,10 @@ button {
 .section {
 	text-align: center;
 	padding: 50px;
+	margin: 0 auto;
+}
+
+.section__container {
 	max-width: 1200px;
 	margin: 0 auto;
 }
@@ -230,4 +234,70 @@ button {
 
 .school__period {
 	font-size: var(--font-small);
+}
+
+/* Skills */
+#skills {
+	background-color: var(--color-light-yellow);
+}
+
+.skillset {
+	display: flex;
+	background-color: var(--color-light-grey);
+	color: var(--color-white);
+	margin-top: 24px;
+}
+
+.skillset__left {
+	flex-basis: 60%;
+	background-color: var(--color-dark-grey);
+	padding: 20px 24px;
+}
+
+.skillset__title {
+	color: var(--color-white);
+}
+
+.skill__description {
+	display: flex;
+	justify-content: space-between;
+	padding-bottom: 10px;
+}
+
+.skill {
+	margin: 40px 0;
+}
+
+.skill__bar {
+	width: 100%;
+	height: 3px;
+	background-color: var(--color-grey);
+}
+
+.skill__value {
+	height: 3px;
+	background-color: var(--color-orange);
+}
+
+.skillset__right {
+	flex-basis: 40%;
+}
+
+.tools {
+	background-color: var(--color-grey);
+}
+
+.tools,
+.etc {
+	padding: 20px;
+}
+
+.tools__list li,
+.etc__list li {
+	margin-bottom: 10px;
+}
+
+.tools__title,
+.etc__title {
+	color: var(--color-white);
 }
