--- a/style.css
+++ b/style.css
@@ -301,3 +301,109 @@ button {
 .etc__title {
 	color: var(--color-white);
 }
+
+/* Work */
+.work__categories {
+	margin: 40px;
+}
+
+.category__btn {
+	border: 1px solid var(--color-dark-white);
+	border-radius: var(--size-border-radius);
+	font-size: var(--font-regular);
+	padding: 8px 48px;
+}
+
+.category__btn:hover,
+.category__btn.active {
+	background-color: var(--color-pink);
+	color: var(--color-white);
+}
+
+.category__btn.active .category__count,
+.category__btn:hover .category__count {
+	opacity: 1;
+	top: 0;
+}
+
+.category__count {
+	background-color: var(--color-orange);
+	border: 1px solid var(--color-orange);
+	border-radius: 50%;
+	color: var(--color-white);
+	width: 24px;
+	height: 24px;
+	display: inline-block;
+	line-height: 24px;
+	position: relative;
+	top: -20px;
+	left: 10px;
+	opacity: 0;
+	transition: all var(--animation-duration) ease-in;
+}
+
+.work__projects {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+}
+
+.project {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin: 2px;
+	background-color: var(--color-light-white);
+	position: relative;
+}
+
+.project__img {
+	width: 100%;
+	height: 100%;
+}
+
+.project__description {
+	position: absolute;
+	background-color: var(--color-black);
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	opacity: 0;
+	transform: translateY(20px);
+	transition: all var(--animation-duration) ease-in;
+}
+
+.project:hover .project__description {
+	opacity: 0.8;
+	transform: translateY(0);
+}
+
+.project__description h3 {
+	color: var(--color-white);
+}
+
+.project__description h3:after {
+	content: '';
+	display: block;
+	position: relative;
+	left: 50%;
+	width: 250px;
+	height: 2px;
+	background-color: var(--color-dark-white);
+	margin-left: -125px;
+	margin-top: 10px;
+}
+
+.work__projects .desktop {
+	width: 420px;
+	height: 300px;
+}
+
+.work__projects .mobile {
+	width: 300px;
+	height: 450px;
+}
