--- a/style.css
+++ b/style.css
@@ -135,6 +135,15 @@ button {
 	border-radius: var(--size-border-radius);
 }
 
+.navbar__toggle-btn {
+	position: absolute;
+	top: 23px;
+	right: 32px;
+	font-size: 24px;
+	color: var(--color-white);
+	display: none;
+}
+
 /* Home */
 #home {
 	background: url(imgs/밤하늘.png) center/cover no-repeat;
@@ -482,4 +491,23 @@ button {
 #contact i {
 	margin: 18px;
 	font-size: var(--font-large);
+}
+
+/* Media Query */
+@media screen and (max-width: 768px) {
+	.navbar__toggle-btn {
+		display: block;
+	}
+
+	#navbar {
+		flex-direction: column;
+		align-items: flex-start;
+	}
+
+	.navbar__menu {
+		flex-direction: column;
+		text-align: center;
+		width: 100%;
+		display: none;
+	}
 }
