--- a/style.css
+++ b/style.css
@@ -177,7 +177,8 @@ button {
 .about__majors {
 	display: flex;
 	justify-content: space-between;
-	margin: 80px 0;
+	margin-top: 45px;
+	margin-bottom: 80px;
 }
 .major {
 	width: 250px;
@@ -190,9 +191,20 @@ button {
 	height: 170px;
 	line-height: 170px;
 	font-size: 70px;
-	border: 1px solid var(--color-light-grey);
 	border-radius: 50%;
 	margin-bottom: 16px;
+}
+
+.html {
+	border: 1px solid var(--color-dark-orange);
+}
+
+.css {
+	border: 1px solid var(--color-blue);
+}
+
+.js {
+	border: 1px solid var(--color-yellow);
 }
 
 .major__icon:hover i {
@@ -361,7 +373,7 @@ button {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	margin: 2px;
+	margin: 5px;
 	background-color: var(--color-light-white);
 	position: relative;
 }
@@ -435,7 +447,7 @@ button {
 	width: 150px;
 	height: 150px;
 	border-radius: 50%;
-	margin: 12px;
+	margin: 10px;
 }
 
 .testimonial__avatar:nth-child(odd) {
@@ -509,5 +521,28 @@ button {
 		text-align: center;
 		width: 100%;
 		display: none;
+	}
+
+	.about__majors {
+		flex-direction: column;
+		width: 100%;
+		align-items: center;
+	}
+
+	.major {
+		margin-bottom: 50px;
+	}
+
+	.skillset {
+		flex-direction: column;
+	}
+
+	.project {
+		flex-grow: 1;
+	}
+
+	.testimonial__avatar {
+		width: 120px;
+		height: 120px;
 	}
 }
