--- a/style.css
+++ b/style.css
@@ -107,12 +107,21 @@ button {
 
 /* Navbar */
 #navbar {
+	position: fixed;
 	display: flex;
 	justify-content: space-between;
-	background-color: var(--color-dark-blue);
+	background-color: transparent;
 	align-items: center;
 	color: var(--color-white);
 	padding: 16px;
+	width: 100%;
+	z-index: 1;
+	transition: all var(--animation-duration) ease-in-out;
+}
+
+#navbar.navbar--dark {
+	background-color: var(--color-dark-blue);
+	padding: 11px;
 }
 
 .navbar__logo {
@@ -137,7 +146,7 @@ button {
 
 .navbar__toggle-btn {
 	position: absolute;
-	top: 23px;
+	top: 15px;
 	right: 32px;
 	font-size: 24px;
 	color: var(--color-white);
@@ -148,6 +157,7 @@ button {
 #home {
 	background: url(imgs/밤하늘.png) center/cover no-repeat;
 	padding: 40px;
+	padding-top: 150px;
 	text-align: center;
 }
 
