--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ button {
 
 #navbar.navbar--dark {
 	background-color: var(--color-dark-blue);
-	padding: 11px;
+	padding: 1px 12px;
 }
 
 .navbar__logo {
@@ -524,6 +524,10 @@ button {
 	#navbar {
 		flex-direction: column;
 		align-items: flex-start;
+	}
+
+	#navbar.navbar--dark {
+		padding: 12px;
 	}
 
 	.navbar__menu {
