--- a/style.css
+++ b/style.css
@@ -377,6 +377,13 @@ button {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
+	opacity: 1;
+	transition: all var(--animation-duration) ease-in;
+}
+
+.work__projects.animation-out {
+	opacity: 0.6;
+	transform: scale(0.96) translateY(40px);
 }
 
 .project {
@@ -386,6 +393,10 @@ button {
 	margin: 5px;
 	background-color: var(--color-light-white);
 	position: relative;
+}
+
+.project.invisible {
+	display: none;
 }
 
 .project__img {
