--- a/style.css
+++ b/style.css
@@ -137,9 +137,12 @@ button {
 	padding: 8px 12px;
 	margin: 0 4px;
 	cursor: pointer;
+	border: 1px solid transparent;
+	border-radius: var(--size-border-radius);
 }
 
 .navbar__menu__item:hover {
+	border-color: var(--color-white);
 	background-color: var(--color-light-blue);
 	border-radius: var(--size-border-radius);
 }
@@ -346,12 +349,12 @@ button {
 }
 
 .category__btn:hover,
-.category__btn.active {
+.category__btn.selected {
 	background-color: var(--color-pink);
 	color: var(--color-white);
 }
 
-.category__btn.active .category__count,
+.category__btn.selected .category__count,
 .category__btn:hover .category__count {
 	opacity: 1;
 	top: 0;
